--- a/Example/HASlider/Base.lproj/Main.storyboard
+++ b/Example/HASlider/Base.lproj/Main.storyboard
@@ -4,7 +4,6 @@
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
-        <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13772"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
@@ -451,9 +450,10 @@
                                         <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="color" keyPath="bottomHandlerColor">
-                                        <color key="value" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <color key="value" red="0.83453887699999996" green="0.85882371660000001" blue="0.86715251209999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </userDefinedRuntimeAttribute>
                                     <userDefinedRuntimeAttribute type="boolean" keyPath="isRightAlign" value="NO"/>
+                                    <userDefinedRuntimeAttribute type="image" keyPath="topHandlerImage" value="ic_slider-circle-1"/>
                                 </userDefinedRuntimeAttributes>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="TV6-K6-DQv" customClass="HAVerticalSlider" customModule="HASlider">
@@ -660,6 +660,7 @@
         <image name="ic_location_rotate" width="64" height="64"/>
         <image name="ic_red_black_circle" width="32" height="32"/>
         <image name="ic_red_black_squarecircle" width="32" height="32"/>
+        <image name="ic_slider-circle-1" width="25" height="25"/>
         <image name="ic_triangle_circle" width="32" height="32"/>
     </resources>
 </document>
